# Clustx

./: CITATION.cff  LICENSE  README.md  pyproject.toml  readme.txt  requirements.txt  ruff.toml
clustx/data/: bench_clusterers.py  clusterers_one_by_one.py  cpu_mem_profile_4_with_plot.py
data/: cpu_mem_profile_5_with_plot.py  s_set1.csv
examples/: make_stageI_summaries1.py  run_aggregation_bo.py  run_aggregation_grid.py  run_benchmark_3d.py  run_r15_5Dbo.py  run_r15_bo.py  run_r15_grid.py  run_sset1_bo.py  run_sset1_grid.py
examples/out_R15_grid_1/: best_params_summary.json  stageA_pre_diffusion_candidates.csv  stageB_post_diffusion_candidates.csv  stageI_row_summary.json
examples/out_aggregation_bo_12/: best_params_summary.json  stageA_pre_diffusion_candidates.csv  stageB_metrics_summary.json  stageB_post_diffusion_candidates.csv  stageI_row_summary.json
examples/out_sset1_bo_12/: best_params_summary.json  stageA_pre_diffusion_candidates.csv  stageB_metrics_summary.json  stageB_post_diffusion_candidates.csv  stageI_row_summary.json
notebooks/: readme.txt
notebooks/diffusion_imputation/: diffusion_imputation.ipynb  grid_vs_atom_180k_fixed.csv  grid_vs_atom_ALL_diff_step1300.csv  grid_vs_atom_ALL_nodiff_step1300.csv  grid_vs_atom_SUMMARY_step1300.csv
src/clustek/: __init__.py  cli.py  core2d.py  core3d.py
src/clustek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/clustx/: __init__.py
tests/: test_core3d_smoke.py
