[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustek"
version = "0.2.0"
description = "ClusTEK: diffusion-imputation + origin-constrained connected components for fast grid clustering"
authors = [{name = "Elyar Tourani"}]
keywords = ["clustering", "molecular-dynamics", "grid", "diffusion", "CCA"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.22",
  "pandas>=1.4",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "scipy>=1.8",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]
bo = ["scikit-optimize>=0.9"]
all = ["scikit-optimize>=0.9", "pytest>=7", "ruff>=0.6"]

[project.scripts]
clustek = "clustek.cli:main"
clustx = "clustek.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["clustek*", "clustx*"]
